<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="click_me">Click Me</string>
    <string name="hello_stack">Hello Stack!</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="centered_text">Centered Text</string>
    <string name="elipse">elipse</string>
    <string name="plus_to_cancel">plus_to_cancel</string>
    <string name="location">Location</string>
    <string name="video">Video</string>
    <string name="camera">Selfie</string>
    <string name="prep">Prep</string>
    <string name="begin">Begin</string>
</resources>