<!-- Custom LinearLayout -->
<com.example.test.flutter_test_code.CustomLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/primary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <!-- Outer FrameLayout for Star -->
    <FrameLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:clipChildren="false"
        android:layout_gravity="center"
        android:clipToPadding="false">

        <!-- ImageView for the Star -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/star"
            android:contentDescription="Star" />

        <!-- Inner FrameLayout centered within the outer FrameLayout -->
        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clipChildren="false"
            android:layout_gravity="center"
            android:background="@drawable/circular_gradient_with_shadow"
            android:clipToPadding="false">

            <!-- Camera Icon ImageView -->
            <ImageView
                android:id="@+id/add"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_add_24"
                android:contentDescription="@string/camera" />

            <!-- Additional ImageView as a design element -->
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end|top"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/elipse"
                android:contentDescription="@string/elipse" />

        </FrameLayout>
    </FrameLayout>

    <!-- Centered Text Below CustomFrameLayout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/location"
        android:textColor="@android:color/black"
        android:textSize="12sp" />
</com.example.test.flutter_test_code.CustomLinearLayout>