<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/extra"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="start">

    <!-- Reusable Custom Item -->
    <com.example.test.flutter_test_code.CustomLinearLayout
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false">

            <include
                android:id="@+id/layout_included"
                layout="@layout/activity_main" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/video_icon"
                android:contentDescription="@string/video" />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </com.example.test.flutter_test_code.CustomLinearLayout>

    <!-- Camera Item -->
    <com.example.test.flutter_test_code.CustomLinearLayout
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false">

            <include
                android:id="@+id/layout_included"
                layout="@layout/activity_main" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/camera_icon"
                android:contentDescription="@string/camera" />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/camera"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </com.example.test.flutter_test_code.CustomLinearLayout>

    <!-- Prep Item -->
    <com.example.test.flutter_test_code.CustomLinearLayout
        android:id="@+id/prep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false">

            <include
                android:id="@+id/layout_included"
                layout="@layout/activity_main" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/prep"
                android:contentDescription="@string/prep" />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prep"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </com.example.test.flutter_test_code.CustomLinearLayout>

    <!-- Begin Item -->
    <com.example.test.flutter_test_code.CustomLinearLayout
        android:id="@+id/begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false">

            <include
                android:id="@+id/layout_included"
                layout="@layout/activity_main" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/begin_icon"
                android:contentDescription="@string/begin" />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/begin"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </com.example.test.flutter_test_code.CustomLinearLayout>

</LinearLayout>